--- a/L24/shendu-studio-vue/package.json
+++ b/L24/shendu-studio-vue/package.json
@@ -10,8 +10,11 @@
   "dependencies": {
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
-    "jquery": "^3.6.0",
-    "vue": "^2.6.11"
+    "echarts": "^4.9.0",
+    "qs": "^6.9.4",
+    "swiper": "^5.2.1",
+    "vue": "^2.6.11",
+    "vue-awesome-swiper": "^4.1.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -20,6 +23,8 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "sass": "^1.32.4",
+    "sass-loader": "^10.1.1",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
@@ -33,10 +38,6 @@
     ],
     "parserOptions": {
       "parser": "babel-eslint"
-    },
-    "rules": {
-      "vue/require-v-for-key": 1,
-      "vue/no-unused-components": 1
     }
   },
   "browserslist": [
